# Task_Manager

./: README.md  package-lock.json  pyproject.toml  setup.ps1
task_manager/: db.sqlite3
task_manager/task_manager/: settings.py
task_manager/tasks/: models.py  serializers.py  tests.py  urls.py  views.py
task_manager_api/: db.sqlite3
task_manager_api/task_manager/: settings.py
task_manager_api/tasks/: admin.py  serializers.py  tests.py  views.py
task_manager_api/tasks/migrations/: 0001_initial.py
task_manager_frontend/: index.html
task_manager_frontend/src/: App.vue  style.css
task_manager_frontend/src/api/: tasks.js
task_manager_frontend/src/views/: FamiliesView.vue  TasksView.vue
tasks_manager_frontend/: package-lock.json  package.json
tasks_manager_frontend/src/: App.vue
tasks_manager_frontend/src/router/: index.js
tasks_manager_frontend/src/views/: FamiliesView.vue  TasksView.vue
