[project]
name = "task-manager"
version = "0.1.0"
description = "Backend API with Django & DRF"
authors = [
    {name = "Endermaiter", email = "marcospnovoa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django>=4.3",
    "djangorestframework>=3.16.1",
    "django-cors-headers>=4.0",
    "django-filter>=25.2"
]

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
